--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django~=1.9
 djangorestframework~=3.3
 django-oauth-toolkit~=0.10
 django-allauth~=0.24
-gunicorn
-dj-static
-dj-database-url
-psycopg2
+gunicorn==19.4.5
+dj-database-url==0.4.0
+dj-static==0.0.6
+psycopg2==2.6.1
